--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,13 @@ body {
   padding: 20px;
   border-radius: 10px;
   background-color: #50bac2;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1) !important;
   text-align: center;
 }
 
 h1 {
   font-size: 2rem;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   color:#093235 !important;
 }
 
@@ -41,6 +41,7 @@ h1 {
 
 .button-group {
   width: 100%;
+  margin-bottom: 15px;
 }
 
 button {
@@ -62,3 +63,21 @@ h2{
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
 }
 
+#numero{
+  background-color: #b5e7e1;
+  border:#b5e7e1;
+  border-radius: 7px;
+  box-shadow:#093235;
+}
+
+.input-group{
+  margin:20px !important;
+}
+
+.form-control{
+  margin:8px !important;
+}
+
+#titulo{
+  margin-top: 15px;
+}
